fixing videos on IE < 9 fixing timer on IE

--- a/public/resources/css/style.css
+++ b/public/resources/css/style.css
@@ -50,6 +50,9 @@
     line-height: 30px;
 }
 
+.timer div br {
+    clear: both;
+}
 .timer:before {
     float: left;
     display: block;
